# shipguesser

./: .gitignore  FindInitialGuess.hs  Main.hs  ShipGuesser.hs  shipguesser.cabal
.github/workflows/: haskell.yml
